feat: assets section now has category tabs to save screen space

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1694,3 +1694,13 @@ body {
     font-size: 12px !important;
   }
 }
+
+/* ===== UTILITY ===== */
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
